--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,7 +25,10 @@
       "path": "styles/style.scss",
       "imports": [
         "styles/partials/_setup.scss",
-        "styles/partials/_global.scss"
+        "styles/partials/_global.scss",
+        "styles/partials/_variables.scss",
+        "styles/partials/_landing-header.scss",
+        "styles/partials/_mixins.scss"
       ]
     }
   ],
