desktop version for top half of main page completed

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,7 +6,8 @@
   "fileTree": {
     "expandedDirs": [
       "assets",
-      "styles"
+      "styles",
+      "styles/partials"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -28,7 +29,8 @@
         "styles/partials/_global.scss",
         "styles/partials/_variables.scss",
         "styles/partials/_landing-header.scss",
-        "styles/partials/_mixins.scss"
+        "styles/partials/_about.scss",
+        "styles/partials/_overview.scss"
       ]
     }
   ],
