working on the blog highlights section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,7 +30,8 @@
         "styles/partials/_variables.scss",
         "styles/partials/_landing-header.scss",
         "styles/partials/_about.scss",
-        "styles/partials/_overview.scss"
+        "styles/partials/_overview.scss",
+        "styles/partials/_blog-highlights.scss"
       ]
     }
   ],
