added the footer, gallery, and journey section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -31,7 +31,10 @@
         "styles/partials/_landing-header.scss",
         "styles/partials/_about.scss",
         "styles/partials/_overview.scss",
-        "styles/partials/_blog-highlights.scss"
+        "styles/partials/_blog-highlights.scss",
+        "styles/partials/_journey.scss",
+        "styles/partials/_gallery.scss",
+        "styles/partials/_footer.scss"
       ]
     }
   ],
