--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,9 +5,7 @@
   "fileConfigs": [],
   "fileTree": {
     "expandedDirs": [
-      "assets",
-      "styles",
-      "styles/partials"
+      "styles"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -34,7 +32,8 @@
         "styles/partials/_blog-highlights.scss",
         "styles/partials/_journey.scss",
         "styles/partials/_gallery.scss",
-        "styles/partials/_footer.scss"
+        "styles/partials/_footer.scss",
+        "styles/partials/_blog-bio.scss"
       ]
     }
   ],
