--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,7 +33,8 @@
         "styles/partials/_journey.scss",
         "styles/partials/_gallery.scss",
         "styles/partials/_footer.scss",
-        "styles/partials/_blog-bio.scss"
+        "styles/partials/_blog-bio.scss",
+        "styles/partials/_blog-article.scss"
       ]
     }
   ],
