start contact and blog page, almost finished home page. Still need to change all the colours of my templates to the real colour scheme but the styling is done

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,6 +26,7 @@
         "styles/partials/_setup.scss",
         "styles/partials/_global.scss",
         "styles/partials/_variables.scss",
+        "styles/partials/_mixins.scss",
         "styles/partials/_landing-header.scss",
         "styles/partials/_about.scss",
         "styles/partials/_overview.scss",
@@ -34,7 +35,9 @@
         "styles/partials/_gallery.scss",
         "styles/partials/_footer.scss",
         "styles/partials/_blog-bio.scss",
-        "styles/partials/_blog-article.scss"
+        "styles/partials/_blog-article.scss",
+        "styles/partials/_form.scss",
+        "styles/partials/_contact.scss"
       ]
     }
   ],
